# Makefile.am - Automake script for proto files to generate
# equivalent *.pb.cc and *.pb.h files

%.pb.cc %.pb.h: %.proto
	$(PROTOC) --proto_path=$(srcdir) --cpp_out=$(srcdir) $^

AM_CPPFLAGS = -Werror \
              -Wall \
              -Wno-unused-parameter \
              -Wno-unused-variable \
              -fexceptions \
              -DSNS_LE_QCS605 \
              -I./

nodist_proto_SOURCES = $(srcdir)/nanopb.pb.cc \
                       $(srcdir)/qti_gravity.pb.cc \
                       $(srcdir)/sns_accel_cal.pb.cc \
                       $(srcdir)/sns_accel.pb.cc \
                       $(srcdir)/sns_ambient_light.pb.cc \
                       $(srcdir)/sns_ambient_temperature.pb.cc \
                       $(srcdir)/sns_amd.pb.cc \
                       $(srcdir)/sns_aont.pb.cc \
                       $(srcdir)/sns_async_com_port.pb.cc \
                       $(srcdir)/sns_basic_gestures.pb.cc \
                       $(srcdir)/sns_bring_to_ear.pb.cc \
                       $(srcdir)/sns_cal.pb.cc \
                       $(srcdir)/sns_ccd_ttw.pb.cc \
                       $(srcdir)/sns_ccd_walk.pb.cc \
                       $(srcdir)/sns_client.pb.cc \
                       $(srcdir)/sns_cmc.pb.cc \
                       $(srcdir)/sns_cmd.pb.cc \
                       $(srcdir)/sns_dae.pb.cc \
                       $(srcdir)/sns_data_acquisition_engine.pb.cc \
                       $(srcdir)/sns_da_test.pb.cc \
                       $(srcdir)/sns_device_mode.pb.cc \
                       $(srcdir)/sns_device_orient.pb.cc \
                       $(srcdir)/sns_diag.pb.cc \
                       $(srcdir)/sns_diag_sensor.pb.cc \
                       $(srcdir)/sns_distance_bound.pb.cc \
                       $(srcdir)/sns_dpc.pb.cc \
                       $(srcdir)/sns_ext_svc.pb.cc \
                       $(srcdir)/sns_facing.pb.cc \
                       $(srcdir)/sns_fmv.pb.cc \
                       $(srcdir)/sns_fw.pb.cc \
                       $(srcdir)/sns_game_rv.pb.cc \
                       $(srcdir)/sns_geomag_rv.pb.cc \
                       $(srcdir)/sns_gravity.pb.cc \
                       $(srcdir)/sns_gyro_cal.pb.cc \
                       $(srcdir)/sns_gyro.pb.cc \
                       $(srcdir)/sns_gyro_rot_matrix.pb.cc \
                       $(srcdir)/sns_hall.pb.cc \
                       $(srcdir)/sns_heart_beat.pb.cc \
                       $(srcdir)/sns_heart_rate.pb.cc \
                       $(srcdir)/sns_humidity.pb.cc \
                       $(srcdir)/sns_interrupt.pb.cc \
                       $(srcdir)/sns_mag_cal.pb.cc \
                       $(srcdir)/sns_mag.pb.cc \
                       $(srcdir)/sns_mcmd.pb.cc \
                       $(srcdir)/sns_motion_detect.pb.cc \
                       $(srcdir)/sns_multishake.pb.cc \
                       $(srcdir)/sns_oem1.pb.cc \
                       $(srcdir)/sns_offbody_detect.pb.cc \
                       $(srcdir)/sns_pedometer.pb.cc \
                       $(srcdir)/sns_pedometer_wrist.pb.cc \
                       $(srcdir)/sns_physical_sensor_test.pb.cc \
                       $(srcdir)/sns_pose_6dof.pb.cc \
                       $(srcdir)/sns_ppg.pb.cc \
                       $(srcdir)/sns_pressure.pb.cc \
                       $(srcdir)/sns_proximity.pb.cc \
                       $(srcdir)/sns_psmd.pb.cc \
                       $(srcdir)/sns_registry.pb.cc \
                       $(srcdir)/sns_remote_proc_state.pb.cc \
                       $(srcdir)/sns_resampler.pb.cc \
                       $(srcdir)/sns_rgb.pb.cc \
                       $(srcdir)/sns_rmd.pb.cc \
                       $(srcdir)/sns_rotv.pb.cc \
                       $(srcdir)/sns_sar.pb.cc \
                       $(srcdir)/sns_sensor_temperature.pb.cc \
                       $(srcdir)/sns_sig_motion.pb.cc \
                       $(srcdir)/sns_signal_sensor.pb.cc \
                       $(srcdir)/sns_sim_legacy.pb.cc \
                       $(srcdir)/sns_sim.pb.cc \
                       $(srcdir)/sns_std_event_gated_sensor.pb.cc \
                       $(srcdir)/sns_std.pb.cc \
                       $(srcdir)/sns_std_sensor.pb.cc \
                       $(srcdir)/sns_std_type.pb.cc \
                       $(srcdir)/sns_suid.pb.cc \
                       $(srcdir)/sns_thermopile.pb.cc \
                       $(srcdir)/sns_threshold.pb.cc \
                       $(srcdir)/sns_tilt.pb.cc \
                       $(srcdir)/sns_tilt_to_wake.pb.cc \
                       $(srcdir)/sns_timer.pb.cc \
                       $(srcdir)/sns_ultra_violet.pb.cc \
                       $(srcdir)/sns_wrist_tilt_gesture.pb.cc

cpp_sources = $(srcdir)/nanopb.pb.cc \
                       $(srcdir)/qti_gravity.pb.cc \
                       $(srcdir)/sns_accel_cal.pb.cc \
                       $(srcdir)/sns_accel.pb.cc \
                       $(srcdir)/sns_ambient_light.pb.cc \
                       $(srcdir)/sns_ambient_temperature.pb.cc \
                       $(srcdir)/sns_amd.pb.cc \
                       $(srcdir)/sns_aont.pb.cc \
                       $(srcdir)/sns_async_com_port.pb.cc \
                       $(srcdir)/sns_basic_gestures.pb.cc \
                       $(srcdir)/sns_bring_to_ear.pb.cc \
                       $(srcdir)/sns_cal.pb.cc \
                       $(srcdir)/sns_ccd_ttw.pb.cc \
                       $(srcdir)/sns_ccd_walk.pb.cc \
                       $(srcdir)/sns_client.pb.cc \
                       $(srcdir)/sns_cmc.pb.cc \
                       $(srcdir)/sns_cmd.pb.cc \
                       $(srcdir)/sns_dae.pb.cc \
                       $(srcdir)/sns_data_acquisition_engine.pb.cc \
                       $(srcdir)/sns_da_test.pb.cc \
                       $(srcdir)/sns_device_mode.pb.cc \
                       $(srcdir)/sns_device_orient.pb.cc \
                       $(srcdir)/sns_diag.pb.cc \
                       $(srcdir)/sns_diag_sensor.pb.cc \
                       $(srcdir)/sns_distance_bound.pb.cc \
                       $(srcdir)/sns_dpc.pb.cc \
                       $(srcdir)/sns_ext_svc.pb.cc \
                       $(srcdir)/sns_facing.pb.cc \
                       $(srcdir)/sns_fmv.pb.cc \
                       $(srcdir)/sns_fw.pb.cc \
                       $(srcdir)/sns_game_rv.pb.cc \
                       $(srcdir)/sns_geomag_rv.pb.cc \
                       $(srcdir)/sns_gravity.pb.cc \
                       $(srcdir)/sns_gyro_cal.pb.cc \
                       $(srcdir)/sns_gyro.pb.cc \
                       $(srcdir)/sns_gyro_rot_matrix.pb.cc \
                       $(srcdir)/sns_hall.pb.cc \
                       $(srcdir)/sns_heart_beat.pb.cc \
                       $(srcdir)/sns_heart_rate.pb.cc \
                       $(srcdir)/sns_humidity.pb.cc \
                       $(srcdir)/sns_interrupt.pb.cc \
                       $(srcdir)/sns_mag_cal.pb.cc \
                       $(srcdir)/sns_mag.pb.cc \
                       $(srcdir)/sns_mcmd.pb.cc \
                       $(srcdir)/sns_motion_detect.pb.cc \
                       $(srcdir)/sns_multishake.pb.cc \
                       $(srcdir)/sns_oem1.pb.cc \
                       $(srcdir)/sns_offbody_detect.pb.cc \
                       $(srcdir)/sns_pedometer.pb.cc \
                       $(srcdir)/sns_pedometer_wrist.pb.cc \
                       $(srcdir)/sns_physical_sensor_test.pb.cc \
                       $(srcdir)/sns_pose_6dof.pb.cc \
                       $(srcdir)/sns_ppg.pb.cc \
                       $(srcdir)/sns_pressure.pb.cc \
                       $(srcdir)/sns_proximity.pb.cc \
                       $(srcdir)/sns_psmd.pb.cc \
                       $(srcdir)/sns_registry.pb.cc \
                       $(srcdir)/sns_remote_proc_state.pb.cc \
                       $(srcdir)/sns_resampler.pb.cc \
                       $(srcdir)/sns_rgb.pb.cc \
                       $(srcdir)/sns_rmd.pb.cc \
                       $(srcdir)/sns_rotv.pb.cc \
                       $(srcdir)/sns_sar.pb.cc \
                       $(srcdir)/sns_sensor_temperature.pb.cc \
                       $(srcdir)/sns_sig_motion.pb.cc \
                       $(srcdir)/sns_signal_sensor.pb.cc \
                       $(srcdir)/sns_sim_legacy.pb.cc \
                       $(srcdir)/sns_sim.pb.cc \
                       $(srcdir)/sns_std_event_gated_sensor.pb.cc \
                       $(srcdir)/sns_std.pb.cc \
                       $(srcdir)/sns_std_sensor.pb.cc \
                       $(srcdir)/sns_std_type.pb.cc \
                       $(srcdir)/sns_suid.pb.cc \
                       $(srcdir)/sns_thermopile.pb.cc \
                       $(srcdir)/sns_threshold.pb.cc \
                       $(srcdir)/sns_tilt.pb.cc \
                       $(srcdir)/sns_tilt_to_wake.pb.cc \
                       $(srcdir)/sns_timer.pb.cc \
                       $(srcdir)/sns_ultra_violet.pb.cc \
                       $(srcdir)/sns_wrist_tilt_gesture.pb.cc

BUILT_SOURCES = $(srcdir)/nanopb.pb.h \
                $(srcdir)/qti_gravity.pb.h \
                $(srcdir)/sns_accel_cal.pb.h \
                $(srcdir)/sns_accel.pb.h \
                $(srcdir)/sns_ambient_light.pb.h \
                $(srcdir)/sns_ambient_temperature.pb.h \
                $(srcdir)/sns_amd.pb.h \
                $(srcdir)/sns_aont.pb.h \
                $(srcdir)/sns_async_com_port.pb.h \
                $(srcdir)/sns_basic_gestures.pb.h \
                $(srcdir)/sns_bring_to_ear.pb.h \
                $(srcdir)/sns_cal.pb.h \
                $(srcdir)/sns_ccd_ttw.pb.h \
                $(srcdir)/sns_ccd_walk.pb.h \
                $(srcdir)/sns_client.pb.h \
                $(srcdir)/sns_cmc.pb.h \
                $(srcdir)/sns_cmd.pb.h \
                $(srcdir)/sns_dae.pb.h \
                $(srcdir)/sns_data_acquisition_engine.pb.h \
                $(srcdir)/sns_da_test.pb.h \
                $(srcdir)/sns_device_mode.pb.h \
                $(srcdir)/sns_device_orient.pb.h \
                $(srcdir)/sns_diag.pb.h \
                $(srcdir)/sns_diag_sensor.pb.h \
                $(srcdir)/sns_distance_bound.pb.h \
                $(srcdir)/sns_dpc.pb.h \
                $(srcdir)/sns_ext_svc.pb.h \
                $(srcdir)/sns_facing.pb.h \
                $(srcdir)/sns_fmv.pb.h \
                $(srcdir)/sns_fw.pb.h \
                $(srcdir)/sns_game_rv.pb.h \
                $(srcdir)/sns_geomag_rv.pb.h \
                $(srcdir)/sns_gravity.pb.h \
                $(srcdir)/sns_gyro_cal.pb.h \
                $(srcdir)/sns_gyro.pb.h \
                $(srcdir)/sns_gyro_rot_matrix.pb.h \
                $(srcdir)/sns_hall.pb.h \
                $(srcdir)/sns_heart_beat.pb.h \
                $(srcdir)/sns_heart_rate.pb.h \
                $(srcdir)/sns_humidity.pb.h \
                $(srcdir)/sns_interrupt.pb.h \
                $(srcdir)/sns_mag_cal.pb.h \
                $(srcdir)/sns_mag.pb.h \
                $(srcdir)/sns_mcmd.pb.h \
                $(srcdir)/sns_motion_detect.pb.h \
                $(srcdir)/sns_multishake.pb.h \
                $(srcdir)/sns_oem1.pb.h \
                $(srcdir)/sns_offbody_detect.pb.h \
                $(srcdir)/sns_pedometer.pb.h \
                $(srcdir)/sns_pedometer_wrist.pb.h \
                $(srcdir)/sns_physical_sensor_test.pb.h \
                $(srcdir)/sns_pose_6dof.pb.h \
                $(srcdir)/sns_ppg.pb.h \
                $(srcdir)/sns_pressure.pb.h \
                $(srcdir)/sns_proximity.pb.h \
                $(srcdir)/sns_psmd.pb.h \
                $(srcdir)/sns_registry.pb.h \
                $(srcdir)/sns_remote_proc_state.pb.h \
                $(srcdir)/sns_resampler.pb.h \
                $(srcdir)/sns_rgb.pb.h \
                $(srcdir)/sns_rmd.pb.h \
                $(srcdir)/sns_rotv.pb.h \
                $(srcdir)/sns_sar.pb.h \
                $(srcdir)/sns_sensor_temperature.pb.h \
                $(srcdir)/sns_sig_motion.pb.h \
                $(srcdir)/sns_signal_sensor.pb.h \
                $(srcdir)/sns_sim_legacy.pb.h \
                $(srcdir)/sns_sim.pb.h \
                $(srcdir)/sns_std_event_gated_sensor.pb.h \
                $(srcdir)/sns_std.pb.h \
                $(srcdir)/sns_std_sensor.pb.h \
                $(srcdir)/sns_std_type.pb.h \
                $(srcdir)/sns_suid.pb.h \
                $(srcdir)/sns_thermopile.pb.h \
                $(srcdir)/sns_threshold.pb.h \
                $(srcdir)/sns_tilt.pb.h \
                $(srcdir)/sns_tilt_to_wake.pb.h \
                $(srcdir)/sns_timer.pb.h \
                $(srcdir)/sns_ultra_violet.pb.h \
                $(srcdir)/sns_wrist_tilt_gesture.pb.h

include_HEADERS = $(srcdir)/nanopb.pb.h \
                $(srcdir)/qti_gravity.pb.h \
                $(srcdir)/sns_accel_cal.pb.h \
                $(srcdir)/sns_accel.pb.h \
                $(srcdir)/sns_ambient_light.pb.h \
                $(srcdir)/sns_ambient_temperature.pb.h \
                $(srcdir)/sns_amd.pb.h \
                $(srcdir)/sns_aont.pb.h \
                $(srcdir)/sns_async_com_port.pb.h \
                $(srcdir)/sns_basic_gestures.pb.h \
                $(srcdir)/sns_bring_to_ear.pb.h \
                $(srcdir)/sns_cal.pb.h \
                $(srcdir)/sns_ccd_ttw.pb.h \
                $(srcdir)/sns_ccd_walk.pb.h \
                $(srcdir)/sns_client.pb.h \
                $(srcdir)/sns_cmc.pb.h \
                $(srcdir)/sns_cmd.pb.h \
                $(srcdir)/sns_dae.pb.h \
                $(srcdir)/sns_data_acquisition_engine.pb.h \
                $(srcdir)/sns_da_test.pb.h \
                $(srcdir)/sns_device_mode.pb.h \
                $(srcdir)/sns_device_orient.pb.h \
                $(srcdir)/sns_diag.pb.h \
                $(srcdir)/sns_diag_sensor.pb.h \
                $(srcdir)/sns_distance_bound.pb.h \
                $(srcdir)/sns_dpc.pb.h \
                $(srcdir)/sns_ext_svc.pb.h \
                $(srcdir)/sns_facing.pb.h \
                $(srcdir)/sns_fmv.pb.h \
                $(srcdir)/sns_fw.pb.h \
                $(srcdir)/sns_game_rv.pb.h \
                $(srcdir)/sns_geomag_rv.pb.h \
                $(srcdir)/sns_gravity.pb.h \
                $(srcdir)/sns_gyro_cal.pb.h \
                $(srcdir)/sns_gyro.pb.h \
                $(srcdir)/sns_gyro_rot_matrix.pb.h \
                $(srcdir)/sns_hall.pb.h \
                $(srcdir)/sns_heart_beat.pb.h \
                $(srcdir)/sns_heart_rate.pb.h \
                $(srcdir)/sns_humidity.pb.h \
                $(srcdir)/sns_interrupt.pb.h \
                $(srcdir)/sns_mag_cal.pb.h \
                $(srcdir)/sns_mag.pb.h \
                $(srcdir)/sns_mcmd.pb.h \
                $(srcdir)/sns_motion_detect.pb.h \
                $(srcdir)/sns_multishake.pb.h \
                $(srcdir)/sns_oem1.pb.h \
                $(srcdir)/sns_offbody_detect.pb.h \
                $(srcdir)/sns_pedometer.pb.h \
                $(srcdir)/sns_pedometer_wrist.pb.h \
                $(srcdir)/sns_physical_sensor_test.pb.h \
                $(srcdir)/sns_pose_6dof.pb.h \
                $(srcdir)/sns_ppg.pb.h \
                $(srcdir)/sns_pressure.pb.h \
                $(srcdir)/sns_proximity.pb.h \
                $(srcdir)/sns_psmd.pb.h \
                $(srcdir)/sns_registry.pb.h \
                $(srcdir)/sns_remote_proc_state.pb.h \
                $(srcdir)/sns_resampler.pb.h \
                $(srcdir)/sns_rgb.pb.h \
                $(srcdir)/sns_rmd.pb.h \
                $(srcdir)/sns_rotv.pb.h \
                $(srcdir)/sns_sar.pb.h \
                $(srcdir)/sns_sensor_temperature.pb.h \
                $(srcdir)/sns_sig_motion.pb.h \
                $(srcdir)/sns_signal_sensor.pb.h \
                $(srcdir)/sns_sim_legacy.pb.h \
                $(srcdir)/sns_sim.pb.h \
                $(srcdir)/sns_std_event_gated_sensor.pb.h \
                $(srcdir)/sns_std.pb.h \
                $(srcdir)/sns_std_sensor.pb.h \
                $(srcdir)/sns_std_type.pb.h \
                $(srcdir)/sns_suid.pb.h \
                $(srcdir)/sns_thermopile.pb.h \
                $(srcdir)/sns_threshold.pb.h \
                $(srcdir)/sns_tilt.pb.h \
                $(srcdir)/sns_tilt_to_wake.pb.h \
                $(srcdir)/sns_timer.pb.h \
                $(srcdir)/sns_ultra_violet.pb.h \
                $(srcdir)/sns_wrist_tilt_gesture.pb.h

requiredlibs =  $(DIAG_LIBS) $(QMIFRAMEWORK_LIBS) $(GLIB_LIBS) $(PROTOBUF_LIBS)

library_includedir = $(pkgincludedir)

lib_LTLIBRARIES = libsnsproto.la
libsnsproto_la_CC = @CC@
libsnsproto_la_SOURCES = $(cpp_sources)
libsnsproto_la_CPPFLAGS = $(AM_CPPFLAGS) @DIAG_CFLAGS@ @QMIFRAMEWORK_CFLAGS@ @GLIB_CFLAGS@ @PROTOBUF_CFLAGS@
libsnsproto_la_LDFLAGS = -shared -version-info 1:0:0 @LDFLAGS@
libsnsproto_la_LIBADD = $(requiredlibs)
